--- a/package.json
+++ b/package.json
@@ -32,14 +32,14 @@
     "lucide-react": "^0.555.0",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "open-props": "^1.7.17",
     "postcss-import": "^16.1.1",
     "postcss-nesting": "^13.0.2",
     "ramda": "^0.32.0",
-    "react": "19.2.0",
+    "react": "^19.2.3",
     "react-cropper": "^2.3.3",
-    "react-dom": "19.2.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "react-select": "^5.10.2",
     "tippy.js": "^6.3.7",
